tests/sema/fail/v5_fail_i8_array.ep
# COMPILE_FAIL: unknown type i8
fun main(): void {
    let xs: i8[]
}
